# fiestaEM

./: .gitignore  MANIFEST.in  setup.cfg
.github/workflows/: pylint.yml  unittest.yml
benchmarks/GRB/: benchmark_afterglowpy_tophat.py
benchmarks/KN/: benchmark_Bu2019lm.py
docs/: quickstart.md  systematics.rst
examples/: .gitignore  injection_gaussian.py
examples/GRB/: bash.sh  injection_gaussian.py  injection_tophat.py
examples/KN/: bash.sh
flux_models/: transfer_data_from_pkl_to_h5.py
flux_models/Bu2024/: benchmark_Bu2024.ipynb  train_Bu2024.py
flux_models/afterglowpy_gaussian/: benchmark_afterglowpy_gaussian.py  create_data_afterglowpy_gaussian.py  create_special_data_afterglowpy_gaussian.py  train_afterglowpy_gaussian.py
flux_models/afterglowpy_gaussian_cVAE/: benchmark.ipynb  benchmark_afterglowpy_gaussian.py  test.ipynb  train_afterglowpy_gaussian.py
flux_models/afterglowpy_gaussian_cnn/: train_afterglowpy_gaussian.py
flux_models/afterglowpy_tophat/: benchmark_afterglowpy_tophat.py  create_data_afterglowpy_tophat.py  create_special_data_afterglowpy_tophat.py  train_afterglowpy_tophat.py
flux_models/pyblastafterglow_gaussian/: benchmark_pyblastafterglow_gaussian.py  check_raw_data.ipynb  check_special_raw_data.ipynb  create_pyblastafterglow_gaussian.py  (+8 more)
lightcurve_models/: benchmark_afterglowpy_gaussian.py  train_afterglowpy_gaussian.py
src/: .gitignore
tests/: test_models.py  test_training.py
trained_fluxes/: benchmark_afterglowpy_gaussian.py  benchmark_afterglowpy_tophat.py  train_afterglowpy_gaussian.py  train_afterglowpy_tophat.py
(+388 files in other folders)
