[metadata]
name = fiestaEM
version = 0.0.2
author = Thibeau Wouters
author_email = thibeauwouters@gmail.com
url = https://github.com/ThibeauWouters/fiestaEM
description = Fast inference of electromagnetic signals with JAX
long_description = file: README.md
long_description_content_type = text/markdown
keywords = sampling, inference, astrophysics, kilonovae, gamma-ray bursts
license = MIT

[options]
packages_dir=
    =src
packages = find:
include_package_data = True

install_requires =
    dill
    jax<=0.5.0
    jaxlib<=0.5.0
    flax
    numpy<2.0.0
    pandas
    jaxtyping
    beartype
    tqdm
    scipy
    ml_collections
    matplotlib
    astropy
    sncosmo
    flowMC
    h5py
    
python_requires =  >=3.10

[options.packages.find]
where=src
